- increase preprocessing sample rate for the static parts of the table

- cleanup Light Debugger dialog and fix 2nd color button

- improve script editing performance again

- improve mouse cursor hide/unhide in (windowed) fullscreen

- fix 'O'-key ball debugging

- fix crash if sound card(s) hardware/driver setup changed

- fix crash on tables with weird table info

- fix potential multi-threading screw-up when loading textures

- fix changing the timer settings not marking the table as dirty

- improve UI scaling on high resolutions (e.g. 4K)

- update example tables with new raytraced ball shadows enabled and other new features
- add better wood texture

- see Changelog_Scripts.txt for the respective core script changes (version 3.60, 3.61)
- see CommandReference.txt for the changelog of all the scripting properties/interface changes
- see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX

VP 10.7.4 Changelog
------------------------

FEATURES:

- add native ball shadows for bulb lights

FIXES:

- fix analogue nudge not working for joysticks/gamepads in XInput mode

- fix wrong keyboard characters in dialogs for non QWERTY keyboards

- fix some problems with playing sounds via BASS: pitch/frequency change and loop/restart should now be matching the 'old' player

- fix longstanding textbox font size bug

- fix swapped red & blue channels when exporting from BMPs

- fix Light Debugger dialog 2nd color button

- improve script editing performance again

- fix crash if sound card(s) hardware/driver setup changed

- fix crash on tables with weird table info

- fix potential multi-threading screw-up when loading textures

- fix saving of custom keys for joypad input

- fix changing the timer settings not marking the table as dirty

- see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX

VP 10.7.3 Changelog
------------------------

FIXES:
